fixed overflow

--- a/styles/index.scss
+++ b/styles/index.scss
@@ -193,10 +193,11 @@ body {
 }
 
 .title {
-	max-width: 647px;
+	max-width: 620px;
 	font-size: 48px;
 	line-height: 60px;
 	margin-top: 24px;
+	font-weight: 700;
 }
 
 .subtitle {
@@ -607,6 +608,8 @@ body {
 	background: url(../images/callback-cloud.png) no-repeat scroll center top;
 	background-color: #081130;
 	padding-top: 300px;
+	padding-bottom: 80px;
+	overflow: hidden;
 
 	.callback__inner {
 		background: white;
@@ -697,7 +700,7 @@ body {
 footer {
 	background-color: #081130;
 	text-align: center;
-	padding: 80px 0px;
+	padding-bottom: 80px;
 
 	li {
 		font-size: 12px;
@@ -774,9 +777,6 @@ footer {
 }
 
 @media (max-width: 850px) {
-	.callback {
-		overflow: hidden;
-	}
 
 	.callback__form {
 		display: inline-flex;
@@ -971,7 +971,7 @@ footer {
 	}
 
 	.sketch__inner {
-		min-height: 100vh;
+		min-height: calc(100vh + 260px);
 	}
 }
 
